# rattler

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  pixi.toml  typos.toml
.github/workflows/: breaking-changes-comment.yml  breaking-changes.yml  docs.yaml  e2e-rattler-fs-tests.yml  release-rust.yaml
crates/benchmarks/: Cargo.toml
crates/benchmarks/shard_storage/: .gitignore  Cargo.toml  benchmark_scale.ps1
crates/benchmarks/shard_storage/src/: benchmark.rs  data.rs  lib.rs  main.rs  remote_benchmark.rs  synthetic.rs
crates/benchmarks/shard_storage/src/storage/: file.rs  mod.rs  sqlite.rs  sqlite_optimized.rs
crates/benchmarks/src/: lib.rs
crates/coalesced_map/: CHANGELOG.md  Cargo.toml
crates/file_url/: CHANGELOG.md  Cargo.toml
crates/path_resolver/: CHANGELOG.md  Cargo.toml
crates/rattler/: CHANGELOG.md  Cargo.toml
crates/rattler-bin/: CHANGELOG.md  Cargo.toml
crates/rattler-bin/src/: main.rs
crates/rattler/src/: package_cache.rs  validation.rs
crates/rattler_cache/: CHANGELOG.md  Cargo.toml
crates/rattler_conda_types/: CHANGELOG.md  Cargo.toml
crates/rattler_conda_types/benches/: matchspec_bench.rs  parse.rs
crates/rattler_conda_types/src/: lib.rs  no_arch_type.rs  package_name.rs  platform.rs  repo_data_record.rs
crates/rattler_config/: CHANGELOG.md  Cargo.toml
crates/rattler_config/src/: config.rs  edit.rs  lib.rs  locations.rs
crates/rattler_config/tests/: compat.rs
crates/rattler_digest/: CHANGELOG.md  Cargo.toml
crates/rattler_digest/src/: serde.rs
crates/rattler_fs/: Cargo.toml
crates/rattler_fs/src/: codesign.rs  fuse_adapter.rs  lib.rs  nfs_adapter.rs  overlay.rs  overlay_fs.rs  projfs_adapter.rs  virtual_fs.rs
crates/rattler_fs/tests/: install_vs_mount_parity.rs
crates/rattler_git/: CHANGELOG.md  Cargo.toml
crates/rattler_git/src/: git.rs  lib.rs  sha.rs  (+3 more)
crates/rattler_index/: CHANGELOG.md  Cargo.toml
crates/rattler_libsolv_c/: CHANGELOG.md  Cargo.toml
crates/rattler_lock/: CHANGELOG.md  Cargo.toml
crates/rattler_macros/: CHANGELOG.md  Cargo.toml
crates/rattler_menuinst/: CHANGELOG.md  Cargo.toml
crates/rattler_menuinst/src/: lib.rs  schema.rs  windows.rs
crates/rattler_networking/: CHANGELOG.md  Cargo.toml
crates/rattler_package_streaming/: CHANGELOG.md  Cargo.toml
crates/rattler_prefix_guard/: CHANGELOG.md  Cargo.toml
crates/rattler_pty/: CHANGELOG.md  Cargo.toml
crates/rattler_redaction/: CHANGELOG.md  Cargo.toml
crates/rattler_repodata_gateway/: CHANGELOG.md  Cargo.toml
crates/rattler_repodata_gateway/proptest-regressions/gateway/: channel_expander.txt
crates/rattler_repodata_gateway/src/: lib.rs  reporter.rs
crates/rattler_repodata_gateway/src/fetch/: mod.rs  with_cache.rs
crates/rattler_repodata_gateway/src/fetch/cache/: mod.rs
crates/rattler_repodata_gateway/src/fetch/jlap/: mod.rs
crates/rattler_repodata_gateway/src/gateway/: builder.rs  channel_config.rs  channel_expander.rs  channel_relations.rs  mod.rs  query.rs  run_exports_extractor.rs  subdir.rs  subdir_source.rs  warning.rs
crates/rattler_repodata_gateway/src/gateway/sharded_subdir/: mod.rs
crates/rattler_repodata_gateway/src/gateway/sharded_subdir/tokio/: mod.rs
crates/rattler_repodata_gateway/src/gateway/sharded_subdir/wasm/: mod.rs
crates/rattler_repodata_gateway/src/gateway/snapshots/: rattler_repodata_gateway__gateway__test__gateway.snap.new  rattler_repodata_gateway__gateway__test__sparse.snap
crates/rattler_repodata_gateway/src/gateway/source/: mod.rs  sparse.rs
crates/rattler_repodata_gateway/src/sparse/: mod.rs
crates/rattler_repodata_gateway/src/sparse_index/: gateway.rs  mod.rs
crates/rattler_repodata_gateway/src/sparse_index/gateway/: http.rs  local.rs  mod.rs  remote.rs
crates/rattler_repodata_gateway/src/sparse_index/gateway/source/: local.rs  mod.rs  remote.rs
crates/rattler_repodata_gateway/src/sparse_index/snapshots/: rattler_repodata_gateway__sparse_index__gateway__test__gateway.snap
crates/rattler_repodata_gateway/src/utils/: cache_map.rs  frozen_coalescing_map.rs  mod.rs
crates/rattler_repodata_gateway/tests/: gateway.rs
crates/rattler_repodata_gateway/tests/snapshots/: gateway__gateway.snap  gateway__gateway.snap.new  gateway__remote_gateway.snap  gateway__remote_gateway.snap.new
crates/rattler_s3/: CHANGELOG.md  Cargo.toml
crates/rattler_sandbox/: CHANGELOG.md  Cargo.toml
crates/rattler_shell/: CHANGELOG.md  Cargo.toml
crates/rattler_solve/: CHANGELOG.md  Cargo.toml
crates/rattler_upload/: CHANGELOG.md  Cargo.toml
crates/rattler_virtual_packages/: CHANGELOG.md  Cargo.toml
crates/simple_spawn_blocking/: CHANGELOG.md  Cargo.toml
crates/simple_yaml_writer/: Cargo.toml
crates/simple_yaml_writer/src/: lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  simple_channel_server.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  main.rs  schema.rs
js-rattler/: Cargo.toml
js-rattler/crate/: package_record.rs
js-rattler/src/: Version.test.ts  Version.ts
py-rattler/: Cargo.toml
py-rattler/rattler/package_streaming/: __init__.py
py-rattler/rattler/virtual_package/: virtual_package.py
py-rattler/src/: index_json.rs  lib.rs  match_spec.rs  nameless_match_spec.rs  paths_json.rs  record.rs  solver.rs  utils.rs  virtual_package.rs
py-rattler/src/package_streaming/: archive.rs  mod.rs
py-rattler/src/repo_data/: gateway.rs
py-rattler/tests/unit/: test_add_headers_middleware.py  test_package_archive.py
schemas/: Arch.json  Md5Hash.json  NoArchType.json  PackageName.json  PackageRecord.json  Platform.json  RunExportsJson.json  Sha256Hash.json  TimestampMs.json  Version.json  VersionWithSource.json
scripts/: bench-install.sh  changed-public-crates.sh  check-breaking-changes.nu  test-breaking-changes.nu  update-breaking-change-comment.nu
scripts/e2e/: rattler-fs-mount.nu
test-data/history/: complex-history  large-history  malformed-history  simple-history
test-data/sparse/: dotslash-test-1.0.0-0.conda  generate.py  info-only-1.0.0-0.conda  sparse-test-1.0.0-0.conda  symlink-test-1.0.0-0.conda  zip64-test-1.0.0-0.conda
(+139 files in other folders)
