[workspace]
members = ["crates/*", "tools/*"]
resolver = "2"

# See: https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

[workspace.package]
categories = ["development-tools"]
homepage = "https://github.com/conda/rattler"
repository = "https://github.com/conda/rattler"
license = "BSD-3-Clause"
edition = "2024"
readme = "README.md"

[workspace.metadata.release]
allow-branch = ["main"]
consolidate-commits = true
tag-prefix = ""

[profile.bench]
lto = true

[workspace.dependencies]
ahash = "0.8"
ambient-id = { version = "0.0.11", default-features = false }
anyhow = "1"
apple-native-keyring-store = { version = "1", default-features = false }
archspec = "0.2"
assert_matches = "1"
async-compression = { version = "0.4", features = [
  "gzip",
  "tokio",
  "bzip2",
  "zstd",
] }
async-fd-lock = "0.2"
async_http_range_reader = { package = "astral_async_http_range_reader", version = "0.11" }
fs4 = "1"
async-once-cell = "0.5"
async-trait = "0.1"
astral_async_zip = { version = "0.0.20", default-features = false }
axum = { version = "0.8", default-features = false, features = [
  "tokio",
  "http1",
] }
base64 = "0.22"
bindgen = "0.72"
blake2 = "0.11.0-rc.6"
bytes = "1"
bzip2 = "0.6"
cache_control = "0.2"
cfg-if = "1"
jiff = { version = "0.2", default-features = false, features = ["std", "serde"] }
clap = { version = "4", features = [
  "derive",
  "color",
  "suggestions",
  "error-context",
  "env",
] }
clap_complete = "4"
clap_complete_nushell = "4"
clap-verbosity-flag = "3"
cmake = "0.1"
console = { version = "0.16", features = ["windows-console-colors"] }
dialoguer = { version = "0.12", default-features = false }
criterion = "0.8"
dashmap = "6"
difference = "2"
digest = "0.11"
dirs = "6"
dbus-secret-service-keyring-store = { version = "1", default-features = false }
dunce = "1"
enum_dispatch = "0.3"
fancy-regex = "0.18"
filetime = "0.2"
fs-err = { version = "3" }
fslock = "0.2"
futures = "0.3"
futures-util = "0.3"
# lots of other crates are still stuck on older version which breaks `deserialize`
# pinning to 0.14.7 because 0.14.8 introduces deprecation notices.
generic-array = "=0.14.7"
getrandom = { version = "0.4", default-features = false }
glob = "0.3"
google-cloud-auth = { version = "1", default-features = false, features = [
  "default-rustls-provider",
] }
aws-config = { version = "1", default-features = false }
aws-sdk-s3 = { version = "1", default-features = false }
aws-smithy-http-client = { version = "1", default-features = false }
aws-credential-types = { version = "1", default-features = false }
hashbrown = "0.17"
hex = "0.4"
hex-literal = "1"
http = "1"
http-auth = { version = "0.1", default-features = false }
http-cache-semantics = "3"
humansize = "2"
humantime = "2"
indexmap = "2"
indicatif = "0.18"
insta = { version = "1" }
itertools = "0.15"
json-patch = "4"
keyring-core = "1"
lazy-regex = "3"
libc = { version = "0.2" }
libloading = "0.9"
libz-sys = { version = "1", default-features = false }
md-5 = "0.11"
memchr = "2"
memmap2 = "0.9"
miette = "7"
netrc-rs = "0.1"
nom = "8"
nom-language = "0.1"
num_cpus = "1"
opendal = { version = "0.57", default-features = false }
once_cell = "1"
open = "5"
openidconnect = { version = "4", default-features = false }
oauth2-reqwest = { version = "0.1.0-alpha.3", default-features = false }
parking_lot = "0.12"
pathdiff = "0.2"
pep440_rs = { version = "0.7" }
pep508_rs = { version = "0.9", features = ["non-pep508-extensions"] }
percent-encoding = "2"
pin-project-lite = "0.2"
plist = "1"
proptest = "1"
purl = { version = "0.1", default-features = false, features = ["serde"] }
quote = "1"
rand = "0.10"
rayon = "1"
reflink-copy = "0.1"
regex = "1"
reqwest = { version = "0.13", default-features = false }
reqwest-middleware = { package = "astral-reqwest-middleware", version = "0.5" }
reqwest-retry = { package = "astral-reqwest-retry", version = "0.9" }
resolvo = { version = "0.11" }
retry-policies = { version = "0.5", default-features = false }
rmp = { version = "0.8" }
rmp-serde = { version = "1" }
rstest = { version = "0.26" }
rstest_reuse = "0.7"
rustix = { version = "1.1", default-features = false }
simd-json = { version = "0.17", features = ["serde_impl"] }
self_cell = "1"
serde = { version = "1" }
serde_bytes = { version = "0.11" }
serde_ignored = "0.1"
serde_json = { version = "1" }
serde_repr = "0.1"
serde-value = "0.7"
serde_with = "3"
serde_yaml = "0.9"
serde-untagged = "0.1"
sha2 = "0.11"
shlex = "2"
similar-asserts = "2"
smallvec = { version = "1", features = [
  "serde",
  "const_new",
  "const_generics",
  "union",
] }
sigstore-sign = { version = "0.11", default-features = false }
sigstore-trust-root = { version = "0.11", default-features = false, features = [
  "tuf",
] }
strum = { version = "0.28", features = ["derive"] }
superslice = "1"
syn = "2"
sysinfo = "0.39"
tar = "0.4"
astral-tokio-tar = "0.6"
tempfile = "3"
temp-env = { version = "0.3", features = ["async_closure"] }
test-log = "0.2"
thiserror = "2"
tokio = { version = "1", default-features = false }
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "1"
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.7", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
tracing-test = { version = "0.2" }
trybuild = { version = "1" }
typed-path = { version = "0.12" }
url = { version = "2" }
urlencoding = "2"
unicode-normalization = "0.1"
uuid = { version = "1", default-features = false }
walkdir = "2"
wasmtimer = "0.4"
which = "8"
windows-sys = { version = "0.61", default-features = false }
windows-native-keyring-store = "1"
winver = { version = "1" }
xxhash-rust = "0.8"
zip = { version = "8", default-features = false }
zstd = { version = "0.13", default-features = false }

# These are the all the crates defined in the workspace. We pin all of them together because they are always updated in tandem.
coalesced_map = { path = "crates/coalesced_map", version = "=0.1.4", default-features = false }
file_url = { path = "crates/file_url", version = "=0.3.2", default-features = false }
path_resolver = { path = "crates/path_resolver", version = "=0.2.12", default-features = false }
rattler = { path = "crates/rattler", version = "=0.47.1", default-features = false }
rattler_cache = { path = "crates/rattler_cache", version = "=0.10.3", default-features = false }
rattler_conda_types = { path = "crates/rattler_conda_types", version = "=0.48.1", default-features = false }
rattler_config = { path = "crates/rattler_config", version = "=0.6.1", default-features = false }
rattler_digest = { path = "crates/rattler_digest", version = "=1.3.2", default-features = false }
rattler_git = { path = "crates/rattler_git", version = "=0.2.0", default-features = false }
rattler_index = { path = "crates/rattler_index", version = "=0.30.9", default-features = false }
rattler_libsolv_c = { path = "crates/rattler_libsolv_c", version = "=1.4.1", default-features = false }
rattler_lock = { path = "crates/rattler_lock", version = "=0.31.5", default-features = false }
rattler_macros = { path = "crates/rattler_macros", version = "=1.1.2", default-features = false }
rattler_menuinst = { path = "crates/rattler_menuinst", version = "=0.2.70", default-features = false }
rattler_networking = { path = "crates/rattler_networking", version = "=0.30.2", default-features = false }
rattler_package_streaming = { path = "crates/rattler_package_streaming", version = "=0.26.8", default-features = false }
rattler_prefix_guard = { path = "crates/rattler_prefix_guard", version = "=0.1.2", default-features = false }
rattler_pty = { path = "crates/rattler_pty", version = "=0.2.15", default-features = false }
rattler_redaction = { path = "crates/rattler_redaction", version = "=0.2.2", default-features = false }
rattler_repodata_gateway = { path = "crates/rattler_repodata_gateway", version = "=0.30.1", default-features = false }
rattler_s3 = { path = "crates/rattler_s3", version = "=0.2.8", default-features = false }
rattler_sandbox = { path = "crates/rattler_sandbox", version = "=0.2.25", default-features = false }
rattler_shell = { path = "crates/rattler_shell", version = "=0.27.10", default-features = false }
rattler_solve = { path = "crates/rattler_solve", version = "=7.2.2", default-features = false }
rattler_upload = { path = "crates/rattler_upload", version = "=0.9.0", default-features = false }
rattler_virtual_packages = { path = "crates/rattler_virtual_packages", version = "=3.0.4", default-features = false }

# This is also a rattler crate, but we only pin it to minor version
simple_spawn_blocking = { path = "crates/simple_spawn_blocking", version = "1.1", default-features = false }
