[package]
name = "py-rattler"
version = "0.25.0"
edition = "2024"
license = "BSD-3-Clause"
publish = false

[lib]
name = "rattler"
crate-type = ["cdylib"]

[features]
default = ["rustls"]
native-tls = [
  "rattler_networking/native-tls",
  "rattler_repodata_gateway/native-tls",
]
rustls = [
  "rattler_networking/rustls",
  "rattler_repodata_gateway/rustls",
  "reqwest/rustls",
]
vendored-openssl = ["openssl", "openssl/vendored"]
pty = ["rattler_pty", "nix"]

[dependencies]
anyhow = "1"
jiff = { version = "0.2" }
futures = "0.3"
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }

rattler_s3 = { path = "../crates/rattler_s3", features = ["serde"] }
rattler = { path = "../crates/rattler", default-features = false, features = [
  "indicatif",
] }
rattler_repodata_gateway = { path = "../crates/rattler_repodata_gateway", default-features = false, features = [
  "sparse",
  "gateway",
  "indicatif",
] }
rattler_conda_types = { path = "../crates/rattler_conda_types", default-features = false }
rattler_config = { path = "../crates/rattler_config", default-features = false }
rattler_digest = { path = "../crates/rattler_digest" }
rattler_networking = { path = "../crates/rattler_networking", default-features = false, features = [
  "gcs",
  "s3",
  "system-integration",
] }
rattler_shell = { path = "../crates/rattler_shell", default-features = false }
rattler_pty = { path = "../crates/rattler_pty", default-features = false, optional = true }
rattler_virtual_packages = { path = "../crates/rattler_virtual_packages", default-features = false }
rattler_solve = { path = "../crates/rattler_solve", default-features = false, features = [
  "resolvo",
] }
rattler_index = { path = "../crates/rattler_index" }
rattler_lock = { path = "../crates/rattler_lock", default-features = false }
rattler_package_streaming = { path = "../crates/rattler_package_streaming", default-features = false, features = ["reqwest"] }
pyo3 = { version = "0.29", features = [
  "abi3-py310",
  "extension-module",
  "multiple-pymethods",
  "jiff-02",
] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
pythonize = "0.29"
tokio = { version = "1", features = ["sync"] }

reqwest = { version = "0.13", default-features = false }
reqwest-middleware = { package = "astral-reqwest-middleware", version = "0.5" }
reqwest-retry = { package = "astral-reqwest-retry", version = "0.9" }
async-trait = "0.1"
http = "1"

thiserror = "2"
url = "2"

openssl = { version = "0.10", optional = true }
pep440_rs = "0.7"
pep508_rs = "0.9"
serde_json = "1"
pyo3-file = "0.17"
nix = { version = "0.31", features = ["process"], optional = true }

[build-dependencies]
pyo3-build-config = "0.29"


[patch.crates-io]

# Prevent package from thinking it's in the workspace
[workspace]
