[package]
name = "rattler_repodata_gateway"
version.workspace = true
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "A crate to interact with Conda repodata"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.71"
async-compression = { version = "0.4.1", features = ["gzip", "tokio", "bzip2", "zstd"] }
bincode = "1.3.3"
blake2 = "0.10.6"
bytes = "1.4.0"
cacache = { version = "11.6.0", default-features = false, features = ["tokio-runtime", "mmap", "tokio-stream"] }
cache_control = "0.2.0"
chrono = { version = "0.4.26", default-features = false, features = ["std", "serde", "alloc", "clock"] }
elsa = "1.8.1"
futures = "0.3.28"
fxhash = { version = "0.2.1" }
hex = { version = "0.4.3", features = ["serde"] }
http = { version = "0.2.9" }
http-cache-semantics = { version = "1.0.1", features = ["reqwest"] }
humansize = "2.1.3"
humantime = "2.1.0"
itertools = { version = "0.11.0" }
json-patch = "1.0.0"
md-5 = "0.10.5"
memmap2 = { version = "0.7.1", optional = true }
ouroboros = { version = "0.17.0", optional = true }
parking_lot = "0.12.1"
pin-project-lite = "0.2.10"
rattler_conda_types = { version = "0.5.0", path = "../rattler_conda_types" }
rattler_digest = { version = "0.5.0", path = "../rattler_digest", features = ["tokio", "serde"] }
rattler_networking = { version = "0.5.0", path = "../rattler_networking", default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = ["stream"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.102" }
serde_with = "3.0.0"
stable_deref_trait = "1.2.0"
superslice = { version = "1.0.0", optional = true }
tempfile = "3.6.0"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["rt", "io-util"] }
tokio-stream = { version = "0.1.14", default-features = false, features = ["io-util", "sync"] }
tokio-util = { version = "0.7.8", features = ["codec", "io"] }
tracing = "0.1.37"
url = { version = "2.4.0", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO"] }

[dev-dependencies]
hex-literal = "0.4.1"
tower-http = { version = "0.4.1", features = ["fs", "compression-gzip", "trace"] }
tracing-test = { version = "0.2.4" }
insta = { version = "1.30.0", features = ["yaml"] }
axum = "0.6.18"
assert_matches = "1.5.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
rstest = "0.18.1"
human-duration = "0.1.0"
test-utils = { path = "../test-utils" }

[features]
default = ['native-tls']
native-tls = ['reqwest/native-tls']
rustls-tls = ['reqwest/rustls-tls']
sparse = ["memmap2", "ouroboros", "superslice", "serde_json/raw_value"]
