[package]
name = "simple_spawn_blocking"
version = "1.1.1"
description = "A simple crate to make spawning blocking tasks more ergonomic"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
tokio = { workspace = true, features = ["rt"], optional = true }
