[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.4.1", features = ["fs", "compression-gzip", "trace"] }
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
url = "2.4.0"

[package.metadata.release]
# Dont publish the binary
release = false
