[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
bindgen = "0.66.1"
anyhow = "1.0.75"
difference = "2.0.0"
tempdir = "0.3.7"
url = "2.5.0"
fslock = "0.2.1"
dirs = "5.0.1"
thiserror = "1.0.30"
rattler_digest = { path = "../rattler_digest" }
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "rustls"] }
tempfile = "3.8.0"
tokio = "1.34.0"

[package.metadata.release]
# Dont publish the binary
release = false
