[package]
name = "shard_storage_benchmark"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
publish = false

[lib]
name = "shard_storage_benchmark"
path = "src/lib.rs"

[[bin]]
name = "shard-bench"
path = "src/main.rs"

[[bin]]
name = "remote-bench"
path = "src/bin/remote-bench.rs"

[dependencies]
# Rattler crates - using path references
rattler_conda_types = { path = "../../rattler_conda_types" }
rattler_digest = { path = "../../rattler_digest" }
rattler_networking = { path = "../../rattler_networking", features = ["default"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.45", features = ["full"] }
futures = "0.3"

# Compression
async-compression = { version = "0.4", features = ["tokio", "zstd"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP & Caching
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
http-cache-semantics = "2.1"

# Utils
tempfile = "3.20"
sha2 = "0.10"
hex = "0.4"
indexmap = { version = "2.10", features = ["serde"] }
ahash = "0.8"
bytes = "1.10"

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
indicatif = "0.18"

# Statistics
hdrhistogram = "7.5"

# Random sampling
rand = "0.9"
